--- a/dashboard.html
+++ b/dashboard.html
@@ -9,7 +9,7 @@
             font-family: Arial, sans-serif;
             text-align: center;
         }
-        .dashboard-button {
+        .button {
             margin-top: 20px;
             padding: 10px 20px;
             background-color: #4CAF50;
@@ -18,110 +18,57 @@
             border-radius: 5px;
             cursor: pointer;
         }
-        .dashboard-button:hover {
+        .button:hover {
             background-color: #45a049;
-        }
-        .marital-status, .user-info, .money-display {
-            font-size: 1.5em;
-            margin-top: 20px;
-        }
-        .money-display {
-            font-size: 1.2em;
-            margin-top: 10px;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to Your Dashboard!</h1>
-    <p>Set up your character and start your adventure!</p>
 
-    <!-- Display user's money -->
-    <div class="money-display" id="money-display">
-        <p>Money: $<span id="user-money">0</span></p>
+    <div id="dashboard-section">
+        <h1>Welcome to Your Dashboard!</h1>
+        <p>You are logged in as: <span id="user-name"></span></p>
+        <p>Your money: <span id="user-money"></span></p>
+        
+        <!-- Buttons for navigation -->
+        <button class="button" onclick="window.location.href='https://toonigy.github.io/world-of-life/romance.html'">Romance</button>
+        <button class="button" onclick="window.location.href='https://toonigy.github.io/world-of-life/career.html'">Career</button>
+        <button class="button" onclick="window.location.href='https://toonigy.github.io/world-of-life/houses.html'">House Shop</button>
+        
+        <!-- Logout button -->
+        <button class="button" onclick="logout()">Log Out</button>
     </div>
 
-    <!-- User info (Name & ID) -->
-    <div class="user-info" id="user-info">
-        <p>Your ID: <span id="user-id">Not logged in</span></p>
-        <p>Your Name: <span id="user-name">Not set</span></p>
-    </div>
-
-    <!-- Buttons for various actions -->
-    <div>
-        <h3>Propose Marriage:</h3>
-        <input type="text" id="propose-id" placeholder="Enter Player ID">
-        <button class="dashboard-button" onclick="proposeTo(document.getElementById('propose-id').value)">Propose</button>
-    </div>
-
-    <div>
-        <h3>Marriage Actions:</h3>
-        <button class="dashboard-button" onclick="acceptProposal()">Accept Proposal</button>
-        <button class="dashboard-button" onclick="rejectProposal()">Reject Proposal</button>
-        <button class="dashboard-button" onclick="divorce()">Divorce</button>
-    </div>
-
-    <div class="marital-status" id="marital-status">
-        <!-- Display marital status -->
-        <p>Checking marital status...</p>
-    </div>
-
-    <!-- House Shop Button -->
-    <div>
-        <h3>House Shop:</h3>
-        <button class="dashboard-button" onclick="window.location.href='https://toonigy.github.io/world-of-life/house-shop.html'">Go to House Shop</button>
-    </div>
-
-    <!-- Career Progress Button -->
-    <div>
-        <h3>Career Progress:</h3>
-        <button class="dashboard-button" onclick="window.location.href='https://toonigy.github.io/world-of-life/career-progress.html'">Check Career Progress</button>
-    </div>
-
-    <!-- Find Other Users Button -->
-    <div>
-        <h3>Find Other Users:</h3>
-        <button class="dashboard-button" onclick="window.location.href='https://toonigy.github.io/world-of-life/find-users.html'">Find Users</button>
-    </div>
-
-    <!-- My House Button -->
-    <div>
-        <h3>My House:</h3>
-        <button class="dashboard-button" onclick="window.location.href='https://toonigy.github.io/world-of-life/my-house.html'">View My House</button>
-    </div>
-
-    <script src="marriage.js"></script>
     <script>
-        // Fetch user info from localStorage
-        const userID = localStorage.getItem("userID");
-        const userName = localStorage.getItem("userName");
-        const userMoney = localStorage.getItem(userID + "_money");
-
-        // Display User ID and Name
-        if (userID && userName) {
-            document.getElementById("user-id").textContent = userID;
-            document.getElementById("user-name").textContent = userName;
-        }
-
-        // Display Money
-        if (userMoney) {
-            document.getElementById("user-money").textContent = userMoney;
-        }
-
-        // Check Marital Status
+        // On page load, check if the user is logged in
         window.onload = function() {
-            checkMarriageStatus();
-        };
+            const userID = localStorage.getItem("userID");
 
-        function checkMarriageStatus() {
-            const currentUserID = localStorage.getItem("userID");
-            const marriedTo = localStorage.getItem(currentUserID + "_married");
-
-            if (marriedTo) {
-                document.getElementById("marital-status").innerHTML = `<p>You are married to ${marriedTo}</p>`;
-            } else {
-                document.getElementById("marital-status").innerHTML = `<p>You are not married yet.</p>`;
+            // If not logged in, redirect to the login page
+            if (!userID) {
+                window.location.href = 'https://toonigy.github.io/world-of-life/login.html';
+                return;
             }
+
+            // Retrieve user data from localStorage
+            const userName = localStorage.getItem("userName");
+            const userMoney = localStorage.getItem(userID + "_money");
+
+            // Display the user info
+            document.getElementById("user-name").textContent = userName || "Not set";
+            document.getElementById("user-money").textContent = userMoney || "0";
+        }
+
+        // Logout function to remove user data and redirect to login page
+        function logout() {
+            // Remove user data from localStorage
+            localStorage.removeItem("userID");
+            localStorage.removeItem("userName");
+
+            // Redirect to the login page
+            window.location.href = 'https://toonigy.github.io/world-of-life/login.html';
         }
     </script>
+
 </body>
 </html>
