--- a/dashboard.html
+++ b/dashboard.html
@@ -33,9 +33,9 @@
 
     <!-- Buttons -->
     <a class="button" href="career.html">Career Progress</a>
-    <a class="button" href="house-shop.html">House Shop</a>
+    <a class="button" href="house_shop.html">House Shop</a>
     <a class="button" href="romance.html">Romance</a>
-    <a class="button" href="find-users.html">Find Other Users</a>
+    <a class="button" href="find_users.html">Find Other Users</a>
     <button class="button" id="logout-button">Log Out</button>
 
     <script>
