--- a/dashboard.html
+++ b/dashboard.html
@@ -9,15 +9,19 @@
             font-family: Arial, sans-serif;
             padding: 20px;
         }
+        .section {
+            margin-bottom: 20px;
+        }
         .button {
             display: inline-block;
-            margin: 10px;
+            margin: 10px 5px;
             padding: 10px 20px;
             background-color: #4CAF50;
             color: white;
             text-decoration: none;
             border-radius: 5px;
             cursor: pointer;
+            text-align: center;
         }
         .button:hover {
             background-color: #45a049;
@@ -26,46 +30,55 @@
 </head>
 <body>
     <h1>Welcome to Your Dashboard</h1>
-    <p>Your Player ID: <span id="user-id"></span></p>
-
-    <!-- Money Display -->
-    <p id="money-display">Money: $0</p>
-
-    <!-- Buttons -->
-    <a class="button" href="career.html">Career Progress</a>
-    <a class="button" href="house_shop.html">House Shop</a>
-    <a class="button" href="romance.html">Romance</a>
-    <a class="button" href="find_users.html">Find Other Users</a>
-    <button class="button" id="logout-button">Log Out</button>
+    <div id="dashboard">
+        <div class="section">
+            <h2>Your ID</h2>
+            <p id="user-id">Not logged in yet</p>
+        </div>
+        <div class="section">
+            <h2>Your Money</h2>
+            <p id="user-money">$0</p>
+        </div>
+        <div class="section">
+            <h2>Your Marriage Status</h2>
+            <p id="marriage-status">You are not married to anyone.</p>
+        </div>
+        <div class="section">
+            <button class="button" onclick="location.href='career.html'">Career Progress</button>
+            <button class="button" onclick="location.href='house-shop.html'">House Shop</button>
+            <button class="button" onclick="location.href='romance.html'">Romance</button>
+            <button class="button" onclick="location.href='find-users.html'">Find Other Users</button>
+            <button class="button" onclick="logout()">Log Out</button>
+        </div>
+    </div>
 
     <script>
-        // Check if the user is logged in
-        window.onload = function () {
-            const userID = localStorage.getItem("userID");
-            const userName = localStorage.getItem("userName");
-            const money = parseInt(localStorage.getItem("money")) || 0;
-
-            // Update user ID display
-            document.getElementById("user-id").textContent = userID || "Not logged in";
-
-            // Update money display
-            document.getElementById("money-display").textContent = `Money: $${money}`;
-
-            // Redirect to login if not logged in
-            if (!userID) {
-                alert("You are not logged in. Redirecting to login page.");
-                window.location.href = "login.html";
-            }
-        };
-
-        // Log out functionality
-        document.getElementById('logout-button').addEventListener('click', function () {
-            localStorage.removeItem("userID");
-            localStorage.removeItem("userName");
-            localStorage.removeItem("money");
-            alert("You have been logged out.");
+        // Check login status and load user data
+        const currentUser = JSON.parse(localStorage.getItem("currentUser"));
+        if (!currentUser || !currentUser.id) {
+            alert("You are not logged in. Redirecting to login page.");
             window.location.href = "login.html";
-        });
+        } else {
+            // Display user ID and money
+            document.getElementById("user-id").innerText = currentUser.id;
+            document.getElementById("user-money").innerText = `$${currentUser.money || 0}`;
+
+            // Check for marriage status
+            const relationships = JSON.parse(localStorage.getItem("relationships")) || {};
+            const marriedTo = Object.values(relationships).filter(rel => rel.married);
+            const marriageStatus = marriedTo.length
+                ? `You are married to: ${marriedTo.map(rel => rel.name).join(", ")}.`
+                : "You are not married to anyone.";
+
+            document.getElementById("marriage-status").innerText = marriageStatus;
+        }
+
+        // Log out function
+        function logout() {
+            localStorage.removeItem("currentUser");
+            alert("You have been logged out.");
+            window.location.href = "index.html";
+        }
     </script>
 </body>
 </html>
